# SolanAI

./: .coveragerc  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  run.py
app/api/: routes.py
app/cli/: twitter_cookies.py
app/clients/: pumpfun.py  solscan.py  twscrape_pool.py
app/config/: twitter_accounts.json
app/db/: coin_cache.py  sol_store.py  tweets_store.py  whale_store.py
app/services/: coin_meta.py  coins.py  fear.py  market.py  trends.py  tweets.py  twitter_accounts.py  wallet_metrics.py  wallets.py  whale_ingest.py
app/worker/: jobs.py
frontend/: package-lock.json  package.json
frontend/src/: App.js
src/: backend_api.py  coin_cache.db  combine_metrics.py  config.py  fear_vs_greed.py  get_sol_price.py  trending_coins.py
src/new_coins/: new_coins.py
src/trend_scraper/: accounts.db  accounts_add_delete.py  get_cookies.py  get_trends.py  trend_accounts.py  trending_data.db
src/tweet_scraper/: accounts.db  getData_withinLimits.py  get_cookies.py  tweet_data.db  tweet_scraper.py  twitter_accounts.py  twitter_accounts_init_delete.py
src/wallet_tracker/: correct.py  get_coin_data.py  wallet_overview.py  wallet_tracker.py
src/whale_watcher/: Notes.txt  backup.py  test.py  test.txt  threading.py  whale.db  whale.py
tests/: conftest.py
tests/services/: test_coin_meta.py  test_coins.py  test_fear.py  test_market.py  test_trends.py  test_twitter_accounts.py  test_wallet_metrics.py  test_wallets.py  test_whale_ingest.py
(+24 files in other folders)
